Internal change
PiperOrigin-RevId: 636129668