@@ -33,7 +33,6 @@ import com.google.devtools.mobileharness.infra.ats.console.result.proto.ReportPr
 import com.google.devtools.mobileharness.infra.ats.console.util.TestRunfilesUtil;
 import com.google.devtools.mobileharness.shared.util.file.local.LocalFileUtil;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import javax.xml.stream.XMLInputFactory;
 import org.junit.Before;
 import org.junit.Rule;
@@ -61,8 +60,81 @@ public final class CompatibilityReportParserTest {
   }
 
   @Test
+  public void parse_ctsReportXml_shallow() throws Exception {
+    Result result = reportParser.parse(Path.of(CTS_TEST_RESULT_XML), true).get();
+
+    assertThat(result.getAttributeList())
+        .containsExactly(
+            Attribute.newBuilder().setKey("start").setValue("1678951330449").build(),
+            Attribute.newBuilder().setKey("end").setValue("1678951395733").build(),
+            Attribute.newBuilder()
+                .setKey("start_display")
+                .setValue("Thu Mar 16 00:22:10 PDT 2023")
+                .build(),
+            Attribute.newBuilder()
+                .setKey("end_display")
+                .setValue("Thu Mar 16 00:23:15 PDT 2023")
+                .build(),
+            Attribute.newBuilder()
+                .setKey("command_line_args")
+                .setValue("cts -s 12241FDD4002Z6")
+                .build(),
+            Attribute.newBuilder().setKey("devices").setValue("12241FDD4002Z6").build())
+        .inOrder();
+
+    assertThat(result.getBuild().getBuildFingerprint())
+        .isEqualTo(
+            "google/bramble/bramble:UpsideDownCake/UP1A.220722.002/8859461:userdebug/dev-keys");
+    assertThat(result.getBuild().getAttributeList())
+        .containsExactly(
+            Attribute.newBuilder()
+                .setKey("adb_version")
+                .setValue("1.0.41 install path: /usr/bin/adb")
+                .build(),
+            Attribute.newBuilder()
+                .setKey("command_line_args")
+                .setValue("cts -s 12241FDD4002Z6")
+                .build(),
+            Attribute.newBuilder()
+                .setKey("device_kernel_info")
+                .setValue(
+                    "Linux localhost 5.10.149-android13-4-693040-g6422af733678-ab9739629 #1 SMP"
+                        + " PREEMPT Fri Mar 10 01:44:38 UTC 2023 aarch64 Toybox")
+                .build(),
+            Attribute.newBuilder().setKey("invocation-id").setValue("1").build(),
+            Attribute.newBuilder().setKey("java_version").setValue("19.0.2").build(),
+            Attribute.newBuilder()
+                .setKey("build_fingerprint")
+                .setValue(
+                    "google/bramble/bramble:UpsideDownCake/UP1A.220722.002/8859461:userdebug/dev-keys")
+                .build())
+        .inOrder();
+
+    assertThat(result.getRunHistory().getRunCount()).isEqualTo(2);
+    assertThat(result.getRunHistory().getRun(0))
+        .isEqualTo(
+            Run.newBuilder()
+                .setStartTimeMillis(1678951330449L)
+                .setEndTimeMillis(1678951360449L)
+                .setPassedTests(9)
+                .setFailedTests(1)
+                .setCommandLineArgs("cts -s 12241FDD4002Z6")
+                .setHostName("myhostname")
+                .build());
+
+    assertThat(result.getSummary())
+        .isEqualTo(
+            Summary.newBuilder()
+                .setPassed(9)
+                .setFailed(1)
+                .setModulesDone(2)
+                .setModulesTotal(2)
+                .build());
+  }
+
+  @Test
   public void parse_ctsReportXml() throws Exception {
-    Result result = reportParser.parse(Paths.get(CTS_TEST_RESULT_XML)).get();
+    Result result = reportParser.parse(Path.of(CTS_TEST_RESULT_XML), /* shallow= */ false).get();
 
     assertThat(result.getAttributeList())
         .containsExactly(
@@ -258,9 +330,9 @@ public final class CompatibilityReportParserTest {
   @Test
   public void parse_nonExistentFile() throws Exception {
     reportParser = new CompatibilityReportParser(XMLInputFactory.newInstance(), localFileUtil);
-    Path nonExistentXml = Paths.get("/path/to/non-existent-xml");
+    Path nonExistentXml = Path.of("/path/to/non-existent-xml");
     when(localFileUtil.isFileExist(nonExistentXml)).thenReturn(false);
 
-    assertThat(reportParser.parse(nonExistentXml)).isEmpty();
+    assertThat(reportParser.parse(nonExistentXml, /* shallow= */ false)).isEmpty();
   }
 }
